selfhost/test/typechecker/for/error_duplicate_ident.out
Error at %FILE_NAME%:1:8
Duplicate name 'x'
  |  for x, x in [123] {
            ^
This name is also declared at (1:5)
  |  for x, x in [123] {
         ^
